Crash in gtk_container_idle_sizer
Downstream bug: https://launchpad.net/bugs/1759468
Stacktrace (using gtk-3.22)
#0 0x00007f04da1b4fad in gtk_style_context_clear_property_cache (context=<optimized out>) at ../../../../gtk/gtkstylecontext.c:276
priv = 0x56193b056980
i = 0
#1 0x00007f04da072f01 in gtk_css_widget_node_update_style (cssnode=0x56193afb0aa0, change=12884901887, timestamp=87695266627, style=0x56193b1690f0) at ../../../../gtk/gtkcsswidgetnode.c:82
context = <optimized out>
widget_node = 0x56193afb0aa0
#2 0x00007f04da057c24 in gtk_css_node_ensure_style (cssnode=0x56193afb0aa0, current_time=87695266627) at ../../../../gtk/gtkcssnode.c:1007
new_style = <optimized out>
style_changed = <optimized out>
#3 0x00007f04da0589b5 in gtk_css_node_ensure_style (current_time=87695266627, cssnode=0x56193afb0aa0) at ../../../../gtk/gtkcssnode.c:1389
style_changed = <optimized out>
style_changed = <optimized out>
new_style = <optimized out>
_pp = <optimized out>
_p = <optimized out>
_destroy = <optimized out>
#4 gtk_css_node_validate_internal (cssnode=0x56193afb0aa0, timestamp=87695266627) at ../../../../gtk/gtkcssnode.c:1384
child = <optimized out>
#5 0x00007f04da0589cb in gtk_css_node_validate_internal (cssnode=<optimized out>, timestamp=87695266627) at ../../../../gtk/gtkcssnode.c:1398
child = 0x56193afb0aa0
timestamp = 87695266627
cssnode = <optimized out>
child = <optimized out>
child = <optimized out>
#6 0x00007f04da0589cb in gtk_css_node_validate_internal (cssnode=<optimized out>, timestamp=87695266627) at ../../../../gtk/gtkcssnode.c:1398
child = 0x56193afb0920
timestamp = 87695266627
cssnode = <optimized out>
child = <optimized out>
child = <optimized out>
#7 0x00007f04da0589cb in gtk_css_node_validate_internal (cssnode=<optimized out>, timestamp=87695266627) at ../../../../gtk/gtkcssnode.c:1398
child = 0x56193af90710
timestamp = 87695266627
cssnode = <optimized out>
child = <optimized out>
child = <optimized out>
#8 0x00007f04da0589cb in gtk_css_node_validate_internal (cssnode=<optimized out>, timestamp=87695266627) at ../../../../gtk/gtkcssnode.c:1398
child = 0x56193af90410
timestamp = 87695266627
cssnode = <optimized out>
child = <optimized out>
child = <optimized out>
#9 0x00007f04da03f5a6 in gtk_container_idle_sizer (clock=0x56193a747d50, container=0x56193aeb24f0) at ../../../../gtk/gtkcontainer.c:2053
No locals.
#10 0x00007f04dab03f6d in g_closure_invoke (closure=0x56193b486d40, return_value=0x0, n_param_values=1, param_values=0x7ffc6e692870, invocation_hint=0x7ffc6e6927f0) at ../../../../gobject/gclosure.c:804
marshal = 0x7f04dab05e60 <g_cclosure_marshal_VOID__VOID>
marshal_data = 0x0
in_marshal = 0
real_closure = 0x56193b486d20
__func__ = "g_closure_invoke"
#11 0x00007f04dab16d3e in signal_emit_unlocked_R (node=node@entry=0x56193a746390, detail=detail@entry=0, instance=instance@entry=0x56193a747d50, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7ffc6e692870) at ../../../../gobject/gsignal.c:3635
tmp = <optimized out>
handler = 0x56193b48b580
accumulator = 0x0
emission = {next = 0x0, instance = 0x56193a747d50, ihint = {signal_id = 31, detail = 0, run_type = G_SIGNAL_RUN_FIRST}, state = EMISSION_RUN, chain_type = 4}
class_closure = <optimized out>
hlist = <optimized out>
handler_list = 0x56193b48b580
return_accu = 0x0
accu = {g_type = 0, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
signal_id = 31
max_sequential_handler_number = 4630
return_value_altered = 0
#12 0x00007f04dab1f3f5 in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=var_args@entry=0x7ffc6e692a30) at ../../../../gobject/gsignal.c:3391
instance_and_params = 0x7ffc6e692870
signal_return_type = <optimized out>
param_values = 0x7ffc6e692888
node = <optimized out>
i = <optimized out>
n_params = <optimized out>
__func__ = "g_signal_emit_valist"
#13 0x00007f04dab1fe0f in g_signal_emit (instance=instance@entry=0x56193a747d50, signal_id=<optimized out>, detail=detail@entry=0) at ../../../../gobject/gsignal.c:3447
var_args = {{gp_offset = 24, fp_offset = 48, overflow_arg_area = 0x7ffc6e692b10, reg_save_area = 0x7ffc6e692a50}}
#14 0x00007f04d9c2259f in _gdk_frame_clock_emit_layout (frame_clock=frame_clock@entry=0x56193a747d50) at ../../../../gdk/gdkframeclock.c:634
No locals.
#15 0x00007f04d9c22c62 in gdk_frame_clock_paint_idle (data=0x56193a747d50) at ../../../../gdk/gdkframeclockidle.c:437
iter = 1
clock = 0x56193a747d50
clock_idle = 0x56193a747d50
priv = 0x56193a747c70
skip_to_resume_events = 0
timings = 0x56193b1d8120
__func__ = "gdk_frame_clock_paint_idle"
#16 0x00007f04d9c0e2c0 in gdk_threads_dispatch (data=0x56193a916c80, data@entry=<error reading variable: value has been optimized out>) at ../../../../gdk/gdk.c:743
dispatch = 0x56193a916c80
ret = 0
#17 0x00007f04da82ab73 in g_timeout_dispatch (source=source@entry=0x56193a743e70, callback=<optimized out>, user_data=<optimized out>) at ../../../../glib/gmain.c:4650
timeout_source = 0x56193a743e70
again = <optimized out>
#18 0x00007f04da82a0f5 in g_main_dispatch (context=0x56193a7300f0) at ../../../../glib/gmain.c:3177
dispatch = 0x7f04da82ab60 <g_timeout_dispatch>
prev_source = 0x0
was_in_call = 0
user_data = 0x56193a916c80
callback = 0x7f04d9c0e2a0 <gdk_threads_dispatch>
cb_funcs = 0x7f04daaf2280 <g_source_callback_funcs>
cb_data = 0x56193b0dee90
need_destroy = <optimized out>
source = 0x56193a743e70
current = 0x56193a783c70
i = 0
current = <optimized out>
i = <optimized out>
source = <optimized out>
_g_boolean_var_ = <optimized out>
was_in_call = <optimized out>
user_data = <optimized out>
callback = <optimized out>
cb_funcs = <optimized out>
cb_data = <optimized out>
need_destroy = <optimized out>
dispatch = <optimized out>
prev_source = <optimized out>
_g_boolean_var_ = <optimized out>
#19 g_main_context_dispatch (context=context@entry=0x56193a7300f0) at ../../../../glib/gmain.c:3830
No locals.
#20 0x00007f04da82a4c0 in g_main_context_iterate (context=context@entry=0x56193a7300f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../../glib/gmain.c:3903
max_priority = 120
timeout = 0
some_ready = 1
nfds = <optimized out>
allocated_nfds = 5
fds = 0x56193b349c50
#21 0x00007f04da82a54c in g_main_context_iteration (context=context@entry=0x56193a7300f0, may_block=may_block@entry=1) at ../../../../glib/gmain.c:3964
retval = <optimized out>
#22 0x00007f04dadead0d in g_application_run (application=0x56193a747c40, argc=<optimized out>, argv=<optimized out>) at ../../../../gio/gapplication.c:2470
arguments = 0x56193aea1c00
status = 0
context = 0x56193a7300f0
acquired_context = <optimized out>
__func__ = "g_application_run"
#23 0x00005619384ccb91 in main (argc=<optimized out>, argv=<optimized out>) at ../shell/main.c:57
application = 0x56193a747c40
Edited by Daniel Boles