container: Stop idle sizer in gtk_container_destroy

Call _gtk_container_stop_idle_sizer in order to properly stop the
idle sizer once the container is destroyed.

https://gitlab.gnome.org/GNOME/gtk/issues/168